@@ -1,5 +1,5 @@
 /* Position.java -- 
-   Copyright (C) 2002 Free Software Foundation, Inc.
+   Copyright (C) 2002, 2004 Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -40,9 +40,23 @@ package javax.swing.text;
 
 public interface Position
 {
-    static class Bias
-    {
-    }
+  static class Bias
+  {
+    public static final Bias Backward = new Bias("backward");
+    public static final Bias Forward = new Bias("forward");
+
+    private String name;
     
-    int getOffset();
+    private Bias(String n)
+    {
+      name = n;
+    }
+
+    public String toString()
+    {
+      return name;
+    }
+  }
+    
+  int getOffset();
 }
