@@ -1,5 +1,10 @@
 2004-07-10  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/text/Position.java
+	(Bias): Implemented.
+
+2004-07-10  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/JTextArea.java
 	(tabSize): New field.
 	(getTabSize): New method.
